[tool.poetry]
name = "mtbp3"
version = "0.2.4"
description = "my tool box"
authors = ["Y. Hsu"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "mtbp3"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]
sphinx = { version = "*", optional = false }
myst-nb = { version = "*", optional = false }
sphinx-autoapi = { version = "*", optional = false }
sphinx_rtd_theme = { version = "*", optional = false }
pytest = { version = "*", optional = false }
matplotlib = { version = "*", optional = false }
seaborn = { version = ">=0.13.2", optional = false }
PyPDF2 = { version = "*", optional = false }
ipywidgets = { version = "*", optional = false }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["Sphinx"]
